Margin-left added on testimonials, stopping divs overlaping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ body {
     padding-top: 20px;
     padding-left: 10px;
     background-color: rgba(227, 148, 146, 0.6);
+    text-align: justify;
     bottom: 60px;
     left: 50px;
     position: absolute;
@@ -254,6 +255,7 @@ p {
    margin-bottom: 20px;
     float:right;
 }
+
 /*----------------------------------  
                Contact Us 
 ---------------------------------- */
@@ -358,6 +360,7 @@ p {
         padding: 60px;
         margin-top: 10px;
         text-align: center;
+        margin-left: 10px;
        } 
 
        h3 {
